--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
  
  <html lang="pt-br">
      <head>
-     	 <meta charset="UTF-8">
-	 <meta name="viewport" content="eidht=device-width, initial-scale=1.0">
+    	<meta charset="UTF-8">
+	 	<meta name="viewport" content="eidht=device-width, initial-scale=1.0">
    	 <title>Exemplo HTML</title>
      </head>	
      <body>
-     	 <h1>Cabeçalho - 1<h1>
-	 <h2>Cabeçalho - 2<h2>
-	 <h3>Cabeçalho - 3<h3>
-	 <h4>Cabeçalho - 4<h4>
-	 <h5>Cabeçalho - 5<h5>
-	 <h6>Cabeçalho - 6<h6>
+     	<h1>Cabeçalho - 1<h1>
+	 	<h2>Cabeçalho - 2<h2>
+	 	<h3>Cabeçalho - 3<h3>
+	 	<h4>Cabeçalho - 4<h4>
+	 	<h5>Cabeçalho - 5<h5>
+	 	<h6>Cabeçalho - 6<h6>
+		<span style="border:solid 2px #ff0000;">Eu sou uma tag de linha</span>
+		<h2 style="border: solid 2px #0000ff;">Eu sou uma tag de bloco</h2>
+
      </body>
  </html>
