--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
      <head>
     	<meta charset="UTF-8">
 	 	<meta name="viewport" content="eidht=device-width, initial-scale=1.0">
-   	 <title>Exemplo HTML</title>
+   	 <title>Página Básica</title>
      </head>	
      <body>
-     	<h1>Cabeçalho - 1<h1>
-	 	<h2>Cabeçalho - 2<h2>
-	 	<h3>Cabeçalho - 3<h3>
-	 	<h4>Cabeçalho - 4<h4>
-	 	<h5>Cabeçalho - 5<h5>
-	 	<h6>Cabeçalho - 6<h6>
-		<span style="border:solid 2px #ff0000;">Eu sou uma tag de linha</span>
-		<h2 style="border: solid 2px #0000ff;">Eu sou uma tag de bloco</h2>
+		<div class="container">
+			<header class="cabecalho">
+				<h1 style="text-align: center;font-family:'Segoe UI', Tahoma, Verdana, sans-serif;">Minha Página</h1>
+				<nav>
+					<ul>
+						<li><a href="https://www.fiap.com.br" target="_blank">FIAP</a></li>
+						<li><a href="https://www.google.com.br" target="_blank">Google</a></li>
+						<li><a href="https://github.com" target="_blank">GitHub</a></li>
+					</ul>
+				</nav>
+			</header>
+		</div>
+
 
      </body>
  </html>
