--- a/index.html
+++ b/index.html
@@ -12,13 +12,69 @@
 				<h1 style="text-align: center;font-family:'Segoe UI', Tahoma, Verdana, sans-serif;">Minha Página</h1>
 				<nav>
 					<ul>
-						<li><a href="https://www.fiap.com.br" target="_blank">FIAP</a></li>
-						<li><a href="https://www.google.com.br" target="_blank">Google</a></li>
-						<li><a href="https://github.com" target="_blank">GitHub</a></li>
+						<li><a href="./Paginas/help.html">Help</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
+			<!--Esta área vai ser a do cabeçalho-->
+			
+			<hr>
+
+			<!--Esta área vai ser a de conteúdo-->
+			<section class="conteudo">
+				<div id="help">
+					<h2>Help</h2>
+					<p>Help - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque magnam qui, ex possimus ratione deleniti repellat aliquid corrupti cumque, voluptatem at. Eius voluptatem at aliquam eaque, sequi quos repudiandae deleniti nisi corporis impedit! Architecto neque quisquam nihil mollitia culpa totam necessitatibus voluptatum reiciendis in nulla impedit, maxime magnam debitis beatae accusamus qui iure aspernatur voluptatibus molestiae quae dolor! In earum saepe neque voluptatem consequuntur adipisci ab. Blanditiis, quam obcaecati reprehenderit libero modi magnam asperiores ipsa, pariatur ea eaque omnis, rem incidunt beatae voluptatibus ipsam esse soluta eius corrupti. Eveniet excepturi minima tempora atque consequuntur, sapiente dolorem accusantium quae qui ratione! Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, deleniti. Quibusdam optio officia reiciendis, dicta esse praesentium velit molestias ducimus hic maiores incidunt sint numquam? Quidem, amet. Eos laboriosam temporibus totam perspiciatis rem accusantium deserunt incidunt quis impedit ducimus? Consequuntur itaque iste, praesentium qui iure beatae ut nulla, laborum tempora aut earum consequatur veniam libero quia debitis! Dolor reprehenderit vel sequi facilis qui blanditiis. Sit, error. Consectetur dignissimos asperiores, omnis natus perspiciatis, exercitationem voluptatibus quisquam vitae optio aliquid voluptatum porro? Inventore veritatis, mollitia aliquid suscipit aut quos eaque, quia possimus voluptatibus asperiores sapiente totam ratione laboriosam dolorum nisi repellat expedita?</p>
+					<a href="./Paginas/help.html">Mais...</a>
+				</div>
+				<div id="about">
+					<h2>ABOUT</h2>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, quo illum! Odio laborum, iusto laudantium sapiente expedita est et accusantium.</p>
+					<a href="./Paginas/about.html">Mais...</a>
+				</div>
+				<div id="contact">
+					<h2>CONTACT</h2>
+					<form>
+						<fieldset>
+							<legend>Customer Data</legend>
+								<div>
+									<label for="idNn">Nome: </label>
+									<input 
+									type="text" 
+									name="txtNm" 
+									id="idNn"
+									placeholder="Digite seu nome aqui">
+								</div>
+								<div>
+									<labe for="idEmail">Email: </label>
+									<input 
+									type="email" 
+									name="txtEmail" 
+									id="idEmail"
+									placeholder="Digite seu nome aqui">
+								</div>
+								<div>
+									<button type="button">Send</button>
+								</div>
+						</fieldset>
+						<span><a href="#container">Voltar</a></span>
+					</form>
+				</div>
+			</section>
+			<!--Esta área vai ser do Rodapé-->
+			<footer>
+				<nav>
+					<ul>
+						<li><a href="https://www.fiap.com.br" target="_blank">FIAP</a></li>
+						<li><a href="https://www.google.com.br" target="_blank">Google</a></li>
+						<li><a href="https://github.com" target="_blank">GitHub</a></li>
+				</nav>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis accusamus officiis sint quod aperiam praesentium quia inventore quidem repellendus rem.</p>
+			</footer>
 		</div>
+		
 
 
      </body>
