--- a/Paginas/about.html
+++ b/Paginas/about.html
@@ -8,12 +8,11 @@
 <body>
     <div class="container">
         <header class="cabecalho">
-            <h1 style="text-align: center;font-family:'Segoe UI', Tahoma, Verdana, sans-serif;">Minha Página</h1>
+            <h1 style="text-align: center;font-family:'Segoe UI', Tahoma, Verdana, sans-serif;">About</h1>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="./help.html">Help</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="../index.html"><img src="../img/home.png" width="5%" alt="Interrogação" title="Ajuda"></a></li>
+                    <li><a href="./help.html"><img src="../img/help.png" width="5%" alt="Logo com I" title="Sobre"></a></li>
                 </ul>
             </nav>
         </header>
