--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 				<h1 style="text-align: center;font-family:'Segoe UI', Tahoma, Verdana, sans-serif;">Minha Página</h1>
 				<nav>
 					<ul>
-						<li><a href="./Paginas/help.html">Help</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="./Paginas/help.html"><img src="./img/help.png" width="5%" alt="Interrogação" title="Ajuda"></a></li>
+						<li><a href="./Paginas/about.html"><img src="./img/about.png" width="5%" alt="Logo com I" title="Sobre"></a></li>
+						<li><a href="#contact"><img	src="./img/contact.png" width="5%" alt="Telefone e Carta" title="Contato"></a></li>
 					</ul>
 				</nav>
 			</header>
